# chess-ai

./: .gitignore  CMakeLists.txt  dependencies.json  install_requirements.sh  main.cpp
neural_network/: CMakeLists.txt
neural_network/src/: genetic_algorithm.cpp  main.h  neural_network.cpp  neural_network.h  tic_tac_toe.cpp
